force-app/main/default/objects/Rebate_Request_Product__c/Rebate_Request_Product__c.object-meta.xml
<CustomObject>
    <label>Rebate Request Product</label>
    <nameField>
        <displayFormat>Prod-{000000}</displayFormat>
        <label>Rebate Request Prod Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Request Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>