force-app/main/default/objects/Rebate_Request_Product__c/fields/Alliance_Rebate_Request__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Rebate_Request__c</fullName>
    <label>Alliance Rebate Request</label>
    <referenceTo>Alliance_Rebate_Request__c</referenceTo>
    <relationshipLabel>Rebate Request Products</relationshipLabel>
    <relationshipName>Rebate_Request_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>