force-app/main/default/objects/Rebate_Request_Product__c/fields/Approved_Price_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Approved_Price_per_unit__c</fullName>
    <label>Approved Price per unit (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>