force-app/main/default/objects/Rebate_Request_Product__c/fields/Competitor_Name_Competitor_Part__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name_Competitor_Part__c</fullName>
    <label>Competitor Name &amp; Competitor  Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>