force-app/main/default/objects/Rebate_Request_Product__c/fields/Dell_System_Model_type__c.field-meta.xml
<CustomField>
    <fullName>Dell_System_Model_type__c</fullName>
    <label>Dell System (Model, type)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>