force-app/main/default/objects/Rebate_Request_Product__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>