force-app/main/default/objects/Rebate_Request_Product__c/fields/Part_Name_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Name_Part_Number__c</fullName>
    <label>Part Name &amp; Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>