force-app/main/default/objects/Rebate_Request_Product__c/fields/Part_Requested__c.field-meta.xml
<CustomField>
    <fullName>Part_Requested__c</fullName>
    <label>Part Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SSD</fullName>
            </value>
            <value>
                <fullName>NIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>