force-app/main/default/objects/Rebate_Request_Product__c/fields/Price_Requested__c.field-meta.xml
<CustomField>
    <fullName>Price_Requested__c</fullName>
    <label>Price Requested (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>