force-app/main/default/objects/Rebate_Request_Product__c/fields/Quantity_Approved__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Approved__c</fullName>
    <label>Quantity Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>