force-app/main/default/objects/Rebate_Request_Product__c/fields/Quantity_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Claimed__c</fullName>
    <label>Quantity Claimed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>