force-app/main/default/objects/Rebate_Request_Product__c/fields/Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Remaining__c</fullName>
    <formula>Quantity_Approved__c  -  Quantity_Claimed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>