force-app/main/default/objects/Rebate_Request_Product__c/fields/Rebate_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Rebate_per_unit__c</fullName>
    <label>Rebate per unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>