force-app/main/default/objects/Rebate_Request_Product__c/fields/Rebate_Per_Units__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Per_Units__c</fullName>
    <formula>if( (Cost_Per_Unit__c -  Approved_Price_per_unit__c)&lt;0,0,Cost_Per_Unit__c -  Approved_Price_per_unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebate Per Unit (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>