force-app/main/default/objects/Rebate_Request_Product__c/fields/Remaining_Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Rebate_Amount__c</fullName>
    <formula>Quantity_Remaining__c  *  Rebate_Per_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Rebate Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>