force-app/main/default/objects/Rebate_Request_Product__c/fields/Sl_No__c.field-meta.xml
<CustomField>
    <fullName>Sl_No__c</fullName>
    <label>Sl. No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>