force-app/main/default/objects/Rebate_Request_Product__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>