force-app/main/default/objects/Rebate_Request_Product__c/fields/X30_Days_Reminder__c.field-meta.xml
<CustomField>
    <fullName>X30_Days_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>30 Days Reminder</label>
    <type>Checkbox</type>
</CustomField>