force-app/main/default/objects/Rebate_Request_Product__c/validationRules/Quantity_Approved_and_Claimed.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Approved_and_Claimed</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity_Claimed__c  &gt;  Quantity_Approved__c</errorConditionFormula>
    <errorMessage>Quantity Claimed should be less than or equal to Quantity Approved</errorMessage>
</ValidationRule>