force-app/main/default/objects/Rebate_Request_Product__c/validationRules/Validate_on_Quantity_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_on_Quantity_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL(Alliance_Rebate_Request__r.Status__c, &apos;Submitted&apos;),  NOT( ISBLANK( Quantity_Claimed__c ) ),  ISBLANK( Quantity_Approved__c )  )</errorConditionFormula>
    <errorMessage>Quantity Approved should not be blank when you enter Quantity Claimed</errorMessage>
</ValidationRule>