force-app/main/default/objects/Rebate_Request_Product__c/validationRules/Validate_Price_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Price_Approved</fullName>
    <active>false</active>
    <errorConditionFormula>Price_Requested__c &lt;  Approved_Price_per_unit__c</errorConditionFormula>
    <errorMessage>Price Approved should not be greater than Price Requested</errorMessage>
</ValidationRule>