force-app/main/default/objects/Rebate_Request_Product__c/validationRules/Validate_Quatity_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Quatity_Approved</fullName>
    <active>false</active>
    <errorConditionFormula>Quantity__c &lt; Quantity_Approved__c</errorConditionFormula>
    <errorMessage>Quantity Approved should not be greater than Quantity Requested</errorMessage>
</ValidationRule>