force-app/main/default/objects/Rebate_Request_Product__c/validationRules/Validate_Start_and_End_date_is_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Start_and_End_date_is_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK( End_Date__c )), ISBLANK(Start_Date__c)  )</errorConditionFormula>
    <errorMessage>Effective Date is required to enter Expiration Date</errorMessage>
</ValidationRule>