force-app/main/default/objects/Rebate_Request_Product__c/validationRules/Validate_Start_date_and_End_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Start_date_and_End_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( End_Date__c )), Start_Date__c &gt;= End_Date__c  )</errorConditionFormula>
    <errorMessage>Expiration date should be greater than Effective date</errorMessage>
</ValidationRule>