force-app/main/default/objects/Rebate_Request_Product__c/validationRules/Validate_Start_Date_not_less_than_TODAY.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Start_Date_not_less_than_TODAY</fullName>
    <active>false</active>
    <errorConditionFormula>OR( AND( NOT(ISBLANK(Start_Date__c)), Start_Date__c &lt; TODAY(), ISNEW() ), AND(ISCHANGED(Start_Date__c), NOT(ISBLANK(Start_Date__c)), Start_Date__c &lt; TODAY() ) )</errorConditionFormula>
    <errorMessage>Effective date should not be less than today</errorMessage>
</ValidationRule>