force-app/main/default/objects/Rebate_Request_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alliance_Rebate_Request__c</columns>
    <columns>Status__c</columns>
    <columns>Approved_Price_per_unit__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Competitor_Name_Competitor_Part__c</columns>
    <columns>Dell_System_Model_type__c</columns>
    <columns>Part_Name_Part_Number__c</columns>
    <columns>Part_Requested__c</columns>
    <columns>Price_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>